@@ -71,6 +71,9 @@ Library
 
 - Issue #23888: Handle fractional time in cookie expiry. Patch by ssh.
 
+- Issue #23004: mock_open() now reads binary data correctly when the type of
+  read_data is bytes.  Initial patch by Aaron Hill.
+
 - Issue #23652: Make it possible to compile the select module against the
   libc headers from the Linux Standard Base, which do not include some
   EPOLL macros.  Patch by Matt Frank.
